# geoflex

./: .gitignore  Makefile  README.md  navbar.md  pyproject.toml
docs/: README.md  _coverpage.md  _sidebar.md  faqs.md  index.html  quick_start.md
docs/methodologies/: 01_overview.md  02_gbr.md  03_synthetic_controls.md  04_tbr.md  05_tbrmm.md  _sidebar.md  navbar.md
docs/python_guides/: 01_experiment_design.md  02_design_evaluation.md  03_design_explorer.md  04_experiment_analysis.md  _sidebar.md  navbar.md  overview.md
docs/ui_guides/: _sidebar.md  overview.md
geoflex/: __init__.py  constraints.py  data.py  experiment.py  experiment_design.py
geoflex/methodology/: __init__.py  _base.py  rct.py
geoflex/tests/: test_constraints.py  test_data.py  test_experiment_design.py  test_top_level_import.py
geoflex/tests/methodology/: test_rct.py
lib/: Makefile  pyproject.toml
lib/geoflex/: __init__.py  bootstrap.py  data.py  evaluation.py  experiment.py  experiment_design.py  exploration_spec.py  explore.py  metrics.py  utils.py  visualization.py
lib/geoflex/methodology/: __init__.py  _base.py  gbr.py  rct.py  synthetic_controls.py  tbr.py  tbrmm.py  testing_methodology.py
lib/geoflex/tests/: test_bootstrap.py  test_data.py  test_evaluation.py  test_experiment.py  test_experiment_design.py  test_exploration_spec.py  test_explore.py  test_metrics.py  test_top_level_import.py  test_utils.py  test_visualization.py
lib/geoflex/tests/methodology/: test_all_methodologies.py  test_base.py  test_rct.py  test_syntheic_controls.py  test_tbrmm.py  test_testing_methodology.py
notebooks/: synthetic_controls_test.ipynb
webapp/: .gcloudignore  .gitignore  .prettierignore  README.md  app.yaml  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  quasar.config.ts  requirements.txt  run-server-local.sh  setup.sh
webapp/server/: config.py  env.py  logger.py  server.py
webapp/server/models/: datasources.py
webapp/server/routes/: __init__.py  configuration.py  datasources.py  designs.py  experiments.py
webapp/server/services/: datasources.py  design_storage.py
webapp/server/tests/: test_datasources_routes.py
webapp/src/: App.vue  env.d.ts
webapp/src/boot/: axios.ts  libs.ts
webapp/src/components/: DataSourceEditor.vue  DataSourceViewer.vue  DesignList.vue  ExperimentTimeline.vue  LogViewer.vue  Logo.vue  MetricBuilder.vue  SideMenu.vue  ValidationComponent.vue  models.ts
webapp/src/css/: app.scss  quasar.variables.scss
webapp/src/helpers/: utils.ts
webapp/src/layouts/: MainLayout.vue
webapp/src/pages/: AnalysisPage.vue  ConfigurationPage.vue  DataSourcesPage.vue  DesignsPage.vue  ErrorNotFound.vue  ExperimentsPage.vue  IndexPage.vue
webapp/src/router/: index.ts  routes.ts
webapp/src/stores/: datasources.ts  designs.ts  index.ts  store-flag.d.ts  ui-settings.ts
