# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geoflex"
version = "0.0.2"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "pydantic",
  "optuna",
  "feedx>=0.0.1",
  "statsmodels",
  "pyarrow",
  "PyYAML",
  "matplotlib",
  "tqdm",
  "pysyncon",
  "matched_markets@git+https://github.com/google/matched_markets"
]
requires-python = ">=3.8"
authors = [
  {name = "Sam Bailey"},
  {name = "Omri Goldstein"},
  {name = "Wincy Liu"},
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mock",
]

[project.urls]
Repository = "https://professional-services.googlesource.com/solutions/geoflex"

[tool.setuptools.package-data]
geoflex = ["tests/*", "tests/**/*"]

[tool.distutils.egg_info]
egg_base = "../../"
